<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:scrollbars="vertical">

<TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1,2"
        xmlns:android="http://schemas.android.com/apk/res/android">
		
		<CheckBox android:checked="false"
       		android:text="Select All" 
            android:id="@+id/selectall" />
            
        <View android:layout_height="2px"
        	android:background="#DDFFDD"
        	android:layout_marginTop="5dip"
       		android:layout_marginBottom="5dip" />
            
		<CheckBox
			android:checked="false"
			android:text="@string/txt"
			android:id="@+id/txt"
			/>
		<CheckBox
			android:checked="false"
			android:text="@string/vA"
			android:id="@+id/vA"
			/>
		<CheckBox
			android:checked="false"
			android:text="@string/vB"
			android:id="@+id/vB"
			/>
		<CheckBox
			android:checked="false"
			android:text="@string/vC"
			android:id="@+id/vC"
			/>
		<CheckBox
			android:checked="false"
			android:text="@string/cat"
			android:id="@+id/cat"
			/>
		<CheckBox
			android:checked="false"
			android:text="@string/lng"
			android:id="@+id/lng"
			/>

	
</TableLayout>
</ScrollView>
